chore: drupal 10 compatibility (wip)
Starting from https://github.com/unic/graphql/pull/1 + some errors fixes in the QueryRouteEnhancer

--- a/graphql.info.yml
+++ b/graphql.info.yml
@@ -3,4 +3,4 @@ type: module
 description: 'Base module for integrating GraphQL with Drupal.'
 package: GraphQL
 configure: graphql.config_page
-core_version_requirement: ^8.8 || ^9
+core_version_requirement: ^8.8 || ^9 || ^10
